# vox2tet

./: .gitignore  CMakeLists.txt  README.md
cmake/: dependencies.cmake
doc/: COMPARISON.md  DOCUMENTATION.md  PERSPECTIVES.md  RESEEDING.md
include/vox2tet/: pipeline.hpp
include/vox2tet/brep/: brep.hpp
include/vox2tet/core/: debug_bridge.hpp  log.hpp  paths.hpp  settings.hpp  types.hpp
include/vox2tet/image/: critical_conn.hpp  edt.hpp  ext_volume.hpp  image_utils.hpp  label.hpp  volume.hpp
include/vox2tet/io/: image_io.hpp  mesh_io.hpp  npy.hpp
include/vox2tet/marching_cubes/: contouring.hpp  lut.hpp  m3c.hpp
include/vox2tet/mesh/: half_edge.hpp  mathx.hpp
include/vox2tet/remesh/: remesh.hpp  reseed.hpp  smooth.hpp
include/vox2tet/tetgen/: tetgen_runner.hpp
include/vox2tet/tetmesh/: cdt_mmg_runner.hpp  steiner_cdt.hpp
src/app/: run_vox2tet.cpp
src/brep/: brep.cpp
src/core/: debug_bridge.cpp  log.cpp  paths.cpp  pipeline.cpp  settings.cpp
src/image/: critical_conn.cpp  edt.cpp  ext_volume.cpp  image_utils.cpp  label.cpp  volume.cpp
src/io/: image_io.cpp  mesh_io.cpp  npy.cpp
src/marching_cubes/: contouring.cpp  lut.cpp  m3c.cpp
src/mesh/: half_edge.cpp  mathx.cpp
src/remesh/: dangle_repair.cpp  remesh.cpp  reseed.cpp  sliver_repair.cpp  smooth.cpp
src/tetgen/: tetgen_runner.cpp
src/tetmesh/: cdt_mmg_runner.cpp  steiner_cdt.cpp
tests/: CMakeLists.txt  test_cdt_mmg.cpp  test_critical_conn.cpp  test_edt.cpp  test_ext_volume.cpp  test_half_edge.cpp  test_jma_surface.cpp  test_label.cpp  test_lut.cpp  test_m3c.cpp  test_mathx.cpp  test_npy.cpp  test_remove_small.cpp  test_reseed.cpp  test_settings.cpp
tests/data/JMA_10/: JMA_10.json  JMA_10.tif
tests/data/JMA_30/: JMA_30.json  JMA_30.tif
tests/tools/: bridge_demo.cpp  diff_mesh.cpp  diff_smesh.cpp  diff_tiffs.cpp  diff_xyz.cpp  mc_only.cpp
tools/: export_luts.py  quality_metrics.py  scipy_bridge.py  view_inp.py
